[metadata]
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6

[options]
install_requires =
    beautifulsoup4
    cachecontrol[filecache]
    lxml
    python-twitter
    requests
packages = find:

[options.extras_require]
dev =
    isort >= 4.3.4
    mypy >= 0.660
    yapf >= 0.27.0

[yapf]
column_limit = 9999

[isort]
line_length = 9999
default_section = THIRDPARTY

[mypy]

[mypy-bs4.*]
ignore_missing_imports = True

[mypy-cachecontrol.*]
ignore_missing_imports = True

[mypy-twitter.*]
ignore_missing_imports = True
